fix for overlapping where row and loadning width adjustments

--- a/chrome/style.css
+++ b/chrome/style.css
@@ -79,7 +79,7 @@
     border: 1px solid #edc967;
     background: #f9edb8;
     padding: 5px 10px 15px;
-    margin: 10px;
+    margin: 4px;
 }
 #g2tPopup #resize-icon {
     position: relative;
@@ -194,8 +194,10 @@
 }
 #g2tPopup #initialLoadingMsg {
     position: absolute;
-    width: 100%;
-    z-index: 1;
+    /* Fix for preventing the msg box from extending beyond the popup.
+    Compensating for Padding 10px, margin 9px & border 1px = Total 19px on one side & 38px for both sides. KS */
+    width: calc(100% - 26px);
+    z-index: 2;
 }
 
 #g2tPopup .popupMsg #error dt {
@@ -215,7 +217,9 @@
 }
 
 #g2tPopup .g2tWhere {
-    width: 180px;
+    /* max-width: 162px !important; */
+    min-width: calc(100% - 20px) !;
+    transition: 100ms;
 }
 
 /* Updated Styles. KS */
@@ -244,7 +248,7 @@
     align-items: center;
     justify-content: flex-start;
 }
-#g2tPopup .g2tWhereGroup{
+#g2tPopup .g2tWhereGroup {
     /* where 83px is the size of the trello button & 16px is the margin on either side. Total 99px */
     max-width: calc(100% - 99px);
 }
@@ -353,7 +357,7 @@
 #g2tPopup .placeholder-label,
 #g2tPopup .popupMsg {
     background: #f9edb8;
-    padding: 3px 8px;
+    padding: 5px 8px;
     border-radius: 3px;
     margin-bottom: 2px;
 }
@@ -369,6 +373,10 @@
 #g2tPopup .g2tFormGroup {
     margin: 0 0px 6px 4px;
     width: calc(100% - 4px);
+}
+#g2tPopup .first-row,
+.g2tFormGroup {
+    width: auto;
 }
 #g2tPopup .g2tFormGroup .g2tFormControl .g2t-holder-button {
     position: static;
@@ -394,7 +402,11 @@
     align-items: flex-start;
     justify-content: space-between;
     margin-bottom: 4px;
-    max-width: 100%;
+    /* max-width: 100%; */
+}
+#g2tPopup .first-row .g2tFormControl {
+    display: flex;
+    /* width: auto; */
 }
 
 #g2tPopup .first-row .g2tFormGroup {
@@ -408,13 +420,14 @@
 }
 #g2tPopup .first-row .g2tFormControl {
     min-height: 29px;
-    max-width: 90%;
 }
 
 #g2tPopup .first-row select {
     margin-top: 0 !important;
     margin-bottom: 0 !important;
     padding: 1px 20px 1px 6px !important;
+    width: calc(100% - 20px);
+    /* width: auto; */
     /* display: none; */
 }
 #g2tPopup .g2tFormControl {
@@ -646,13 +659,14 @@
 }
 [for-select="g2tBoard"],
 [for-select="g2tList"] {
-    max-width: 200px;
+    /* max-width: 200px; */
     min-width: 150px;
-    flex-grow: 1.5;
+    flex-grow: 2;
     flex-basis: 150px;
+    transition: 300ms;
 }
 [for-select="g2tCard"] {
-    flex-grow: 1.5;
+    flex-grow: 2;
     min-width: 150px;
     flex-basis: 150px;
 }
